--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Chang Fang Ray</span>
                     </h1>
                     <div class="subheading mb-5">
-                        台北市文山區保儀路75號 · (02)2236-793 ·
+                        台北市文山區保儀路75號 · (02)2236-793
                         <a href="mailto:name@email.com">a109070021@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">我是來自木柵的大帥哥，我對於程式設計非常有興趣，此外我也喜歡打麻將，空閒喜歡用打麻將賺點生活費，或在家裡研究程式語言，增廣見聞。
