--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        張方瑞
-                        <span class="text-primary">Chang Fang Ray</span>
-                    </h1>
+                    <h1 class="mb-0">張方瑞</h1>
+					<h1 class="mb-5"><span class="text-primary">Fang-Ray Chang</span></h1>
                     <div class="subheading mb-5">
-                        台北市文山區保儀路75號 · (02)2236-793
-                        <a href="mailto:name@email.com">a109070021@mail.shu.edu.tw</a>
+						<p>台北市保儀路75號</p>
+						<p>No.75, Rd. Baoyi, Taipei City, Taiwan</p>
+						<p>(Tel)0975643699<p>
+                       <a href="mailto:name@email.com">a109070021@mail.shu.edu.tw
                     </div>
-                    <p class="lead mb-5">我是來自木柵的大帥哥，我對於程式設計非常有興趣，此外我也喜歡打麻將，空閒喜歡用打麻將賺點生活費，或在家裡研究程式語言，增廣見聞。
-					I am a handsome guy from Mucha. I am very interested in programming. In addition, I also like playing mahjong. In my free time, I like to use mahjong to earn some living expenses, or study programming languages ​​at home to increase my knowledge.</p>
+                    <p class="lead mb-5">我是來自木柵的大帥哥，我對於程式設計非常有興趣，此外我也喜歡打麻將，空閒喜歡用打麻將賺點生活費，或在家裡研究程式語言，增廣見聞。</p>
+                    <p class="lead mb-5">  I am a handsome guy from Mucha. I am very interested in programming. In addition, I also like playing mahjong. In my free time, I like to use mahjong to earn some living expenses, or study programming languages ​​at home to increase my knowledge.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
