--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">熱舞社Dancing Club</h3>
+                            <div class="subheading mb-3">政附舞時嵐</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -113,7 +112,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">國立政大附中</h3>
+                            <h3 class="mb-0">國立政治大學附屬高級中學</h3>
 							<h3> The Affiliated High School Of National Cheng Chi University </h3>
                             <div class="subheading mb-3">普通科General Subjects</div>
                         </div>
