--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts--><link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+					 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,14 +49,14 @@
 						<p>No.75, Rd. Baoyi, Taipei City, Taiwan</p>
 						<p>(Tel)0975643699<p>
                        <a href="mailto:name@email.com">a109070021@mail.shu.edu.tw
-                    </div>
-                    <p class="lead mb-5">我是來自木柵的大帥哥，我對於程式設計非常有興趣，此外我也喜歡打麻將，空閒喜歡用打麻將賺點生活費，或在家裡研究程式語言，增廣見聞。</p>
-                    <p class="lead mb-5">  I am a handsome guy from Mucha. I am very interested in programming. In addition, I also like playing mahjong. In my free time, I like to use mahjong to earn some living expenses, or study programming languages ​​at home to increase my knowledge.</p>
+					   </div>
+                    <p class="lead mb-5">我是來自木柵的大帥哥，我對於程式設計非常有興趣，此外我也喜歡打麻將，空閒喜歡用打麻將賺點生活費，或在家裡研究程式語言，增廣見聞。
+                    <p class="lead mb-5"> I am handsome guy from Mucha. I am very interested in programming. In addition, I also like playing mahjong. In my free time, I like to use mahjong to earn some living expenses, or study programming languages ​​at home to increase my knowledge.
+                    <P>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://fangrayyy.github.io/#"><i class="fab fa-github"></i></a>
+			<a class="social-icon" href="https://www.instagram.com/_.flounder_/"><i class="fab fa-instagram"></i></a>
+			<a class="social-icon" href="https://www.facebook.com/profile.php?id=100010417268147"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -66,34 +67,17 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">熱舞社Dancing Club</h3>
-                            <div class="subheading mb-3">政附舞時嵐</div>
+                            <h3 class="mb-0">熱舞社活動間設備</h3>
+                            <p>國立政治大附中 The Affiliated High School Of National Cheng Chi University</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2017 - 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                            <h3 class="mb-0">春季舞會主持人</h3>
+                            <p>國立政治大附中 The Affiliated High School Of National Cheng Chi University</p>
+			            </div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -217,6 +201,14 @@
                     </ul>
                 </div>
             </section>
+			<hr class="m-0" />
+			 <!-- Friends-->
+	    <section class="resume-section" id="friends">
+              <div class="resume-section-content">
+		      <h2 class="mb-5">Friends</h2>
+		      <ul class="fa-ul mb-0">
+		      <li><a href="https://sdo0204.github.io/">林長薇</a></li>
+              <li><a href="https://phoebe162.github.io/">張勻瑄</a></li>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
