--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
 					 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
+					 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#favorite">Favorite</a></li>
                 </ul>
             </div>
         </nav>
@@ -185,6 +186,41 @@
 		    <i><i class="fas fa-user"></i>
               <li><a href="https://phoebe162.github.io/">張勻瑄</a></li>
         </div>
+		<hr class="m-0" />
+		<!--Favorite-->
+                <section class="resume-section" id="favorite">
+                      <div class="resume-section-content">
+        		      <h2 class="mb-5">Favorite</h2>
+        			  <table class="table">
+        			  <tr class="table-primary">
+           <tr>
+              <th>影集 TV SERIES</th>
+              <th>演員 ACTOR</th>
+			  <th>語言 language<th>
+			  <th>發行年<th>
+           </tr>
+           <tr>
+              <td>荒唐分局 BROOKLYN 99</a></td>
+              <td>Andy Samberg </a></td>
+              <td>英文 English</a></td>
+              <td>2013</a></td>
+           </tr>
+           <tr>
+              <td>絕命毒師 Brwaking Bad</a></td>
+              <td>Bryan Lee Cranston</a></td>
+              <td>英文 English</a></td>
+              <td>2008</a></td>
+           </tr>
+           <tr>
+              <td>后羿棄兵 The Queen's gambit</a></td>
+              <td>Anya Taylor-Joy</a></td>
+              <td>英文 English</a></td>
+        	  <td>2020</a></tr>
+        </tr>
+     <tr>
+    </tbody>
+  </table>
+</div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
