--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
 		    <i><i class="fas fa-user"></i>
               <li><a href="https://phoebe162.github.io/">張勻瑄</a></li>
         </div>
-		<hr class="m-0" />
-		<!--Favorite-->
+            </section>
+            <hr class="m-0" />
+	<!--Favorite-->
                 <section class="resume-section" id="favorite">
                       <div class="resume-section-content">
         		      <h2 class="mb-5">Favorite</h2>
