--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
               <div class="resume-section-content">
 		     <h2 class="mb-5">Friends</h2>
                     <ul class="fa-ul mb-0">	
-		    <li class="list-inline-item">
-		    <i><i class="fas fa-user"></i>
+		      <li class="list-inline-item"><i class="fas fa-user"></i>
               <li><a href="https://phoebe162.github.io/">張勻瑄</a></li>
                </li>
                 </ul>
