--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
 	    <section class="resume-section" id="friends">
               <div class="resume-section-content">
 		     <h2 class="mb-5">Friends</h2>
-                    <ul class="fa-ul mb-0">	
-		      <li class="list-inline-item"><i class="fas fa-user"></i>
-              <li><a href="https://phoebe162.github.io/">張勻瑄</a></li>
+                   <ul class="fa-ul mb-0">
+                    <li class="list-inline-item"><i class="fas fa-user"></i>
+                    <a href="https://phoebe162.github.io">張勻瑄</a></li>
                </li>
                 </ul>
                 </div>
@@ -198,25 +198,21 @@
               <th>影集 TV SERIES</th>
               <th>演員 ACTOR</th>
 			  <th>語言 language<th>
-			  <th>發行年<th>
            </tr>
            <tr>
               <td>荒唐分局 BROOKLYN 99</a></td>
               <td>Andy Samberg </a></td>
               <td>英文 English</a></td>
-              <td>2013</a></td>
            </tr>
            <tr>
               <td>絕命毒師 Brwaking Bad</a></td>
               <td>Bryan Lee Cranston</a></td>
               <td>英文 English</a></td>
-              <td>2008</a></td>
            </tr>
            <tr>
               <td>后羿棄兵 The Queen's gambit</a></td>
               <td>Anya Taylor-Joy</a></td>
               <td>英文 English</a></td>
-        	  <td>2020</a></tr>
         </tr>
      <tr>
     </tbody>
