--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                        </li>
+                    <p>	I like to investigate in stock and play pokers in my free time,investigating stocks and play pokers not only can earn lots of money but also bring lots of joy to me.</p>
+                     <ul class="list-inline dev-icons">
+				    <li class="list-inline-item"><i class="fas fa-spade"></i></li>
+				    <li class="list-inline-item"><i class="fas fa-analytics"></i></li>
+					 </li>
                     </ul>
                 </div>
             </section>
