--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -33,8 +33,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-					 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
-					 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#favorite">Favorite</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#goals">Goals</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
+		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#favorite">Favorite</a></li>
                 </ul>
             </div>
         </nav>
@@ -134,6 +135,63 @@
                 </div>
             </section>
 			<hr class="m-0" />
+			<!--Goals-->
+				<section class="resume-section" id="goals">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Goals</h2>
+					<div id="accordion">
+						<div class="card">
+							<div class="card-header">
+								<a class="card-link" data-toggle="collapse" href="#collapseOne">
+									Goals
+								</a>
+						</div>
+							<div id="collapseOne" class="collapse show" data-parent="#accordion">
+								<div class="card-body">
+									<table class="table table-hover">
+										<thead>
+											<tr>
+												<th>項目</th>
+												<th>預計達成時間</th>
+												<th></th>
+												<th></th>
+												<th></th>
+												<th></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>考取機車駕照</td>
+												<td>2021</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+											<tr>
+												<td>考取多益900分</td>
+												<td>2022</td>
+												<td></td>
+												<td></td>
+												<td></td>
+												<td></td>
+											</tr>
+											<tr>
+												<td>增進網頁設計之能力</td>
+			<td>2021</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			</tr>
+			</tbody>
+			</table>
+			</div>
+			</div>
+			</div>
+                    </div>
+		</div>
+            </section>       
 			 <!-- Friends-->
 	    <section class="resume-section" id="friends">
               <div class="resume-section-content">
