--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+		<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#photography">Photography</a></li>
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#goals">Goals</a></li>
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
 		    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#favorite">Favorite</a></li>
@@ -134,6 +135,46 @@
                     </ul>
                 </div>
             </section>
+			<hr class="m-0" />
+				       <!-- Photography-->
+            <section class="resume-section" id="photography">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Photography</h2>
+                    <div id="graph_setOne" class="collpse show" data-parent="#graph_set" style="">
+		                <div class="card-body">
+		                    <div class="row text-center text-ig-left">
+			                    <div class="col-md-4">
+			                        <div class="card border-0 shadow">
+				                    <img class="card-img-top" src="assets/img/張.JPG" >
+					                        <div class="card-text-text-black-50">
+					                        2020/09/15
+					                        </div>
+				                        </div>
+			                        </div>
+			                    </div>
+								<div class="col-md-4">
+			                        <div class="card border-0 shadow">
+				                    <img class="card-img-top" src="assets/img/勻.JPG">>
+					                        <div class="card-text-text-black-50">
+					                        2020/12/25
+					                        </div>
+				                        </div>
+			                        </div>
+			                    </div>
+								<div class="col-md-4">
+			                        <div class="card border-0 shadow">
+				                    <img class="card-img-top" src="assets/img/瑄.JPG">
+					                        <div class="card-text-text-black-50">
+					                        2021/01/31
+					                        </div>
+				                        </div>
+			                    </div>
+                            </div>
+						</div>
+					</div>	
+		        </div>
+            </section>
+			
 			<hr class="m-0" />
 			<!--Goals-->
 				<section class="resume-section" id="goals">
