--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		                    <div class="row text-center text-ig-left">
 			                    <div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/張.JPG" >
+				                    <img class="card-img-top" src="assets/img/張.jpeg" >
 					                        <div class="card-text-text-black-50">
 					                        2020/09/15
 					                        </div>
@@ -154,7 +154,7 @@
 			                    </div>
 								<div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/勻.JPG">>
+				                    <img class="card-img-top" src="assets/img/勻.jpeg">>
 					                        <div class="card-text-text-black-50">
 					                        2020/12/25
 					                        </div>
@@ -163,7 +163,7 @@
 			                    </div>
 								<div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/瑄.JPG">
+				                    <img class="card-img-top" src="assets/img/瑄.jpeg">
 					                        <div class="card-text-text-black-50">
 					                        2021/01/31
 					                        </div>
