--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>	I like to investigate in stock and play pokers in my free time,investigating stocks and play pokers not only can earn lots of money but also bring lots of joy to me.</p>
                      <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fas fa-spade"></i></li>
-				    <li class="list-inline-item"><i class="fas fa-analytics"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-chess-board"></i>></li>
+				    <li class="list-inline-item"><i class="fas fa-chart-line"></i></li>
 					 </li>
                     </ul>
                 </div>
@@ -145,7 +145,7 @@
 		                    <div class="row text-center text-ig-left">
 			                    <div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/張.jpeg" >
+				                    <img class="card-img-top" src="assets/img/張.jpeg.JPG" >
 					                        <div class="card-text-text-black-50">
 					                        2020/09/15
 					                        </div>
@@ -154,7 +154,7 @@
 			                    </div>
 								<div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/勻.jpeg">>
+				                    <img class="card-img-top" src="assets/img/勻.jpeg.JPG">>
 					                        <div class="card-text-text-black-50">
 					                        2020/12/25
 					                        </div>
@@ -163,7 +163,7 @@
 			                    </div>
 								<div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/瑄.jpeg">
+				                    <img class="card-img-top" src="assets/img/瑄.jpeg.JPG">
 					                        <div class="card-text-text-black-50">
 					                        2021/01/31
 					                        </div>
