--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>	I like to investigate in stock and play pokers in my free time,investigating stocks and play pokers not only can earn lots of money but also bring lots of joy to me.</p>
                      <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fas fa-chess-board"></i>></li>
+                        <li class="list-inline-item"><i class="fas fa-chess-board"></i></li>
 				    <li class="list-inline-item"><i class="fas fa-chart-line"></i></li>
 					 </li>
                     </ul>
