--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			                    </div>
 								<div class="col-md-4">
 			                        <div class="card border-0 shadow">
-				                    <img class="card-img-top" src="assets/img/勻.jpeg">>
+				                    <img class="card-img-top" src="assets/img/勻.jpeg">
 					                        <div class="card-text-text-black-50">
 					                        2020/12/25
 					                        </div>
